--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
 .App {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.mainContainer{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  gap: 1rem;
+}
+
+.outerContainer{
+  width: 30rem;
+  height: 2rem;
+  border-radius: 1rem;
+  position: relative;
+}
+
+.innerContainer{
+  height: 100%;
+  border-radius: 1rem;
+  background-color: #f39c12;
+  transition: all 0.08s ease-in;
+}
+
+.filled{
+  position: absolute;
+  top: 15%;
+  left: 45%;
+}
+
+button{
+  padding: 0.5rem 1rem;
+  border: none;
+  background-color: #f39c12;
+  border-radius: 0.5rem;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-family: inherit;
+  font-weight: 600;
+  cursor: pointer;
+  outline: none;
+  box-shadow: 0 0 1rem -0.3rem black;
 }
