--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  background: linear-gradient(to right, #bdc3c7, #2c3e50);
+
 }
 
 .mainContainer{
@@ -13,6 +15,9 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: white;
 }
 
 .outerContainer{
